<resources>
    <string name="app_name">Cadastro</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="estados">
        <item>select your state...</item>
        <item>RS</item>
        <item>SC</item>
        <item>SAP</item>
        <item>RJ</item>
    </string-array>

    <string name="txtNome">Name: </string>
    <string name="txtHintNome">Enter your nome... </string>
    <string name="txtSobrenome">Surname: </string>
    <string name="txtHintSobrenome">Enter your last name...</string>
    <string name="txtIdade">Age: </string>
    <string name="txtHintIdade">Enter your age...</string>
    <string name="txtEstado">State </string>
    <string name="txtRegistrar">Register</string>

</resources>