<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8b4513"
    tools:context=".FormularioActivity">

    <TextView
        android:id="@+id/textView4"
        style="@style/labels"
        android:layout_width="80dp"
        android:layout_height="23dp"
        android:text="@string/txtNome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etNome"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <TextView
        android:id="@+id/textView"
        style="@style/labels"
        android:layout_width="80dp"
        android:layout_height="23dp"
        android:text="@string/txtSobrenome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etSobrenome"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <TextView
        android:id="@+id/textView2"
        style="@style/labels"
        android:layout_width="80dp"
        android:layout_height="23dp"
        android:text="@string/txtIdade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etIdade"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView3"
        style="@style/labels"
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:text="@string/txtEstado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spEstado"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="304dp"
        android:layout_height="46dp"
        style="@style/inserir"
        android:ems="10"
        android:hint="@string/txtHintNome"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etSobrenome"
        android:layout_width="304dp"
        android:layout_height="46dp"
        style="@style/inserir"
        android:hint="@string/txtHintSobrenome"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etIdade"
        android:layout_width="304dp"
        android:layout_height="46dp"
        style="@style/inserir"
        android:hint="@string/txtHintIdade"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spEstado"
        style="@style/inserir"
        android:layout_width="304dp"
        android:layout_height="27dp"
        android:entries="@array/estados"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNome"
        app:layout_constraintVertical_bias="0.267"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnRegistrar"
        style="@style/inserir"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:text="@string/txtRegistrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />


</androidx.constraintlayout.widget.ConstraintLayout>